k8s/base/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  selector:
    matchLabels:
      app: jackett
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: jackett
        tier: backend
        track: stable
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett:latest
        volumeMounts:
        - name: jackett-persistent-storage
          mountPath: /config
          subPath: jackett/config
        - name: jackett-persistent-storage
          mountPath: /downloads
          subPath: downloads/
      volumes:
      - name: jackett-persistent-storage
        persistentVolumeClaim:
          claimName: home-server-pvc
