k8s/base/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  selector:
    app: jackett
    tier: backend
  ports:
  - protocol: TCP
    port: 9117
